--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource-variable/overpass": "^5.0.18",
+    "@fontsource/roboto": "^5.0.12",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
